--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,10 +1,18 @@
 name: C/C++ CI
 
 on:
+  # Trigger the workflow on push or pull request,
+  # but only for the master branch
   push:
     branches: [ master ]
+    tags:
+    - zopfli-1.*
   pull_request:
     branches: [ master ]
+  schedule:
+    # run every Wednesday at 0 AM UTC
+    - cron: "0 0 * * 3"
+  
 
 jobs:
   build:
